@@ -2,6 +2,7 @@ event_features = configuration_data()
 event_features.set('USE_EVENTFD', is_linux and get_option('eventfd'))
 event_features.set('USE_SIGNALFD', is_linux and get_option('signalfd'))
 event_features.set('USE_EPOLL', is_linux and get_option('epoll'))
+event_features.set('NO_BOOST', true)
 configure_file(output: 'Features.h', configuration: event_features)
 
 event_sources = []
@@ -28,7 +29,6 @@ event = static_library(
   event_sources,
   include_directories: inc,
   dependencies: [
-    boost_dep,
   ],
 )
 
@@ -38,6 +38,5 @@ event_dep = declare_dependency(
     thread_dep,
     net_dep,
     system_dep,
-    boost_dep,
   ],
 )
